--- a/_posts/2023-02-05-设计模式概要.md
+++ b/_posts/2023-02-05-设计模式概要.md
@@ -232,7 +232,7 @@ tags: [interface, design_patterns]
 
 ##### 3.依赖倒置原则
 
-依赖倒置原则（Dependence Inversion Principle，DIP）是 Object Mentor 公司总裁罗伯特·马丁（Robert C.Martin）于 1996 年在 [C++](http://c.biancheng.net/cplus/) Report 上发表的文章。
+依赖倒置原则（Dependence Inversion Principle，DIP）是 Object Mentor 公司总裁罗伯特·马丁（Robert C.Martin）于 1996 年在 [C++](https://c.biancheng.net/cplus/) Report 上发表的文章。
 
 依赖倒置原则的原始定义为：**高层模块不应该依赖低层模块，两者都应该依赖其抽象；抽象不应该依赖细节，细节应该依赖抽象**（High level modules shouldnot depend upon low level modules.Both should depend upon abstractions.Abstractions should not depend upon details. Details should depend upon abstractions）。其核心思想是：**要面向接口编程，不要面向实现编程**。
 
