记录一些参考，忙，没时间学习

--- a/_posts/2025-02-21-RocketMQ订阅一致性思考.md
+++ b/_posts/2025-02-21-RocketMQ订阅一致性思考.md
@@ -102,3 +102,7 @@ graph TD
 2. 不一致会有什么问题，原因是啥？
 3. 不同消费实例订阅不同topic & 不同消费者实例订阅相同topic，但不同tag
 4. 针对上述问题，如何解决消费者增加tag的情况，默认生产环境分批发布
+
+相关问题参考，待吸收整理
+1. https://zhuanlan.zhihu.com/p/660603004
+2. https://mp.weixin.qq.com/s/Ypk-U8uVu4aZKMinbfU3xQ
