记录一些参考，忙，没时间学习

--- a/_posts/2023-02-04-Redis基础.md
+++ b/_posts/2023-02-04-Redis基础.md
@@ -495,3 +495,6 @@ Redis keys过期有两种方式：**被动**和**主动**方式。
 **一致性哈希算法数据倾斜问题**，利用虚拟物理节点的方式；
 
 计算哈希值时，加上一个数字在计算，会得到数个几点
+
+### 六、Redis底层特性
+1. [Redis Cluster通过hash slot映射数据，但是如何把两个key映射到同一个slot中呢？](https://developer.aliyun.com/article/1270922)
