--- a/_posts/2025-02-21-RocketMQ订阅一致性思考.md
+++ b/_posts/2025-02-21-RocketMQ订阅一致性思考.md
@@ -104,5 +104,5 @@ graph TD
 4. 针对上述问题，如何解决消费者增加tag的情况，默认生产环境分批发布
 
 相关问题参考，待吸收整理
-1. https://zhuanlan.zhihu.com/p/660603004
-2. https://mp.weixin.qq.com/s/Ypk-U8uVu4aZKMinbfU3xQ
+1. [RocketMQ 为什么要保证订阅关系一致](https://zhuanlan.zhihu.com/p/660603004)
+2. [RocketMQ最佳实践之坑？](https://mp.weixin.qq.com/s/Ypk-U8uVu4aZKMinbfU3xQ)
